추가: 무기와 카메라 조작
추가: 무기와 카메라 조작

애니메이션 손에 무기 들고 있도록 추가함
카메라 위 아래 볼 수 있게 추가함

성열현

무기 콜라이더는 이후에 적용합니다

--- a/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Developers/syhwms/Collections
+ContentBrowserTab1.SelectedPaths=/Classes_Game/StarryTail
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -178,7 +178,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-StarryTail.TimeStamp=2022.03.05-09.22.19
+StarryTail.TimeStamp=2022.03.05-10.58.28
 StarryTail.LastCompileMethod=Runtime
 PakFile.TimeStamp=2022.01.06-05.49.47
 PakFile.LastCompileMethod=Unknown
@@ -1076,8 +1076,8 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=149.600 Y=41.600
-WindowSize=X=1784.800 Y=1017.600
-InitiallyMaximized=True
+WindowSize=X=1788.000 Y=1020.800
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1781,6 +1781,7 @@ Brush.Surface Materials=True
 Brush.Geometry=True
 Brush.Surface Properties=True
 LightmassPrimitiveSettingsObject.Lightmass=True
+SkeletalMeshSocket.Socket Parameters=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/StarryTail.IreneCharacter;
@@ -1810,8 +1811,8 @@ IreneCharacter="\"Object.IreneCharacter.SpringArmComp\" \"Object.IreneCharacter.
 Character="\"Object.IreneCharacter.SpringArmComp\" \"Object.IreneCharacter.SpringArmComp.Object.CameraCollision\" \"Object.IreneCharacter.SpringArmComp.Object.CameraSettings\" \"Object.IreneCharacter.SpringArmComp.Object.Lag\" \"Object.IreneCharacter.SpringArmComp.Object.Transform\" \"Object.IreneCharacter.SpringArmComp.Object.Transform.RelativeRotation\" \"Object.IreneCharacter.SpringArmComp.Object.Rendering\" \"Object.IreneCharacter.SpringArmComp.Object.Physics\" \"Object.IreneCharacter.SpringArmComp.Object.LOD\" \"Object.IreneCharacter.SpringArmComp.Object.Tags\" \"Object.IreneCharacter.SpringArmComp.Object.AssetUserData\" \"Object.IreneCharacter.SpringArmComp.Object.Collision\" \"Object.IreneCharacter.SpringArmComp.Object.Cooking\" \"Object.IreneCharacter.CameraComp\" \"Object.IreneCharacter.CameraComp.Object.CameraSettings\" \"Object.IreneCharacter.CameraComp.Object.CameraOptions\" \"Object.IreneCharacter.CameraComp.Object.Camera\" \"Object.IreneCharacter.CameraComp.Object.PostProcess\" \"Object.IreneCharacter.CameraComp.Object.PostProcess.PostProcessSettings\" \"Object.IreneCharacter.CameraComp.Object.Lens\" \"Object.IreneCharacter.CameraComp.Object.Color Grading\" \"Object.IreneCharacter.CameraComp.Object.Rendering Features\" \"Object.IreneCharacter.CameraComp.Object.Transform\" \"Object.IreneCharacter.CameraComp.Object.Transform.RelativeRotation\" \"Object.IreneCharacter.CameraComp.Object.Physics\" \"Object.IreneCharacter.CameraComp.Object.Tags\" \"Object.IreneCharacter.CameraComp.Object.AssetUserData\" \"Object.IreneCharacter.CameraComp.Object.Collision\" \"Object.IreneCharacter.CameraComp.Object.Cooking\" \"Object.IreneCharacter.MoveKey\" \"Object.IreneCharacter.CharacterDataStruct\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" "
 Pawn="\"Object.IreneCharacter.SpringArmComp\" \"Object.IreneCharacter.SpringArmComp.Object.CameraCollision\" \"Object.IreneCharacter.SpringArmComp.Object.CameraSettings\" \"Object.IreneCharacter.SpringArmComp.Object.Lag\" \"Object.IreneCharacter.SpringArmComp.Object.Transform\" \"Object.IreneCharacter.SpringArmComp.Object.Transform.RelativeRotation\" \"Object.IreneCharacter.SpringArmComp.Object.Rendering\" \"Object.IreneCharacter.SpringArmComp.Object.Physics\" \"Object.IreneCharacter.SpringArmComp.Object.LOD\" \"Object.IreneCharacter.SpringArmComp.Object.Tags\" \"Object.IreneCharacter.SpringArmComp.Object.AssetUserData\" \"Object.IreneCharacter.SpringArmComp.Object.Collision\" \"Object.IreneCharacter.SpringArmComp.Object.Cooking\" \"Object.IreneCharacter.CameraComp\" \"Object.IreneCharacter.CameraComp.Object.CameraSettings\" \"Object.IreneCharacter.CameraComp.Object.CameraOptions\" \"Object.IreneCharacter.CameraComp.Object.Camera\" \"Object.IreneCharacter.CameraComp.Object.PostProcess\" \"Object.IreneCharacter.CameraComp.Object.PostProcess.PostProcessSettings\" \"Object.IreneCharacter.CameraComp.Object.Lens\" \"Object.IreneCharacter.CameraComp.Object.Color Grading\" \"Object.IreneCharacter.CameraComp.Object.Rendering Features\" \"Object.IreneCharacter.CameraComp.Object.Transform\" \"Object.IreneCharacter.CameraComp.Object.Transform.RelativeRotation\" \"Object.IreneCharacter.CameraComp.Object.Physics\" \"Object.IreneCharacter.CameraComp.Object.Tags\" \"Object.IreneCharacter.CameraComp.Object.AssetUserData\" \"Object.IreneCharacter.CameraComp.Object.Collision\" \"Object.IreneCharacter.CameraComp.Object.Cooking\" \"Object.IreneCharacter.MoveKey\" \"Object.IreneCharacter.CharacterDataStruct\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[30]\" "
-Object="\"Object.SkeletalMeshes\" "
-HOTRELOADED_IreneCharacter_1="\"Object.IreneCharacter.MoveKey\" \"Object.IreneCharacter.CharacterDataStruct\" "
+Object=
+HOTRELOADED_IreneCharacter_1="\"Object.IreneCharacter.SpringArmComp\" \"Object.IreneCharacter.SpringArmComp.Object.CameraCollision\" \"Object.IreneCharacter.SpringArmComp.Object.CameraSettings\" \"Object.IreneCharacter.SpringArmComp.Object.Lag\" \"Object.IreneCharacter.SpringArmComp.Object.Transform\" \"Object.IreneCharacter.SpringArmComp.Object.Transform.RelativeRotation\" \"Object.IreneCharacter.SpringArmComp.Object.Rendering\" \"Object.IreneCharacter.SpringArmComp.Object.Physics\" \"Object.IreneCharacter.SpringArmComp.Object.LOD\" \"Object.IreneCharacter.SpringArmComp.Object.Tags\" \"Object.IreneCharacter.SpringArmComp.Object.AssetUserData\" \"Object.IreneCharacter.SpringArmComp.Object.Collision\" \"Object.IreneCharacter.SpringArmComp.Object.Cooking\" \"Object.IreneCharacter.CameraComp\" \"Object.IreneCharacter.CameraComp.Object.CameraSettings\" \"Object.IreneCharacter.CameraComp.Object.CameraOptions\" \"Object.IreneCharacter.CameraComp.Object.Camera\" \"Object.IreneCharacter.CameraComp.Object.PostProcess\" \"Object.IreneCharacter.CameraComp.Object.PostProcess.PostProcessSettings\" \"Object.IreneCharacter.CameraComp.Object.Lens\" \"Object.IreneCharacter.CameraComp.Object.Color Grading\" \"Object.IreneCharacter.CameraComp.Object.Rendering Features\" \"Object.IreneCharacter.CameraComp.Object.Transform\" \"Object.IreneCharacter.CameraComp.Object.Transform.RelativeRotation\" \"Object.IreneCharacter.CameraComp.Object.Physics\" \"Object.IreneCharacter.CameraComp.Object.Tags\" \"Object.IreneCharacter.CameraComp.Object.AssetUserData\" \"Object.IreneCharacter.CameraComp.Object.Collision\" \"Object.IreneCharacter.CameraComp.Object.Cooking\" \"Object.IreneCharacter.MoveKey\" \"Object.IreneCharacter.CharacterDataStruct\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" "
 HOTRELOADED_IreneCharacter_2="\"Object.IreneCharacter.CharacterDataStruct\" "
 HOTRELOADED_IreneCharacter_0="\"Object.IreneCharacter.MoveKey\" \"Object.IreneCharacter.CharacterDataStruct\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1912,28 +1913,30 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.새 액션 매핑_6,InputSettings.Bindings.AxisMappings.LeftButton,
 IreneCharacter=IreneCharacter.IreneCharacter.Lens,
 CapsuleComponent=
+HOTRELOADED_IreneCharacter_1=IreneCharacter.IreneCharacter.Lens,
+PlayerStart=IreneCharacter.IreneCharacter.Lens,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Developers/syhwms/Collections/BP_KeQing
-MRUItem1=/Game/Developers/syhwms/Collections/Attack_A
-MRUItem2=/Game/Developers/syhwms/Collections/KeQing_2D
-MRUItem3=/Game/Developers/syhwms/Collections/Move_KeQing_Anim
-MRUItem4=/Game/Developers/syhwms/Collections/Jump_A_Weapon_Anim
-MRUItem5=/Game/Developers/syhwms/Collections/Move_KeQing_Skeleton
-MRUItem6=/Game/Developers/syhwms/Collections/Move
-MRUItem7=/Game/Developers/syhwms/Collections/Attack_A_KeQing_Anim
-MRUItem8=/Game/Developers/syhwms/Collections/Attack_C_KeQing_Anim
-MRUItem9=/Game/Developers/syhwms/Collections/Jump_C_KeQing_Anim
-MRUItem10=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem11=/Game/Developers/syhwms/Collections/Jump_A_KeQing_Anim
-MRUItem12=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem13=/Game/Developers/syhwms/Collections/Walk_KeQing_Anim
-MRUItem14=/Game/Developers/syhwms/Collections/RushA_KeQing_Anim
-MRUItem15=/Game/Developers/syhwms/Collections/Jump_B_KeQing_Anim
-MRUItem16=/Game/Developers/syhwms/Collections/dead_KeQing_Anim
-MRUItem17=/Game/Developers/syhwms/Collections/Attack_B_KeQing_Anim
-MRUItem18=/Game/Developers/syhwms/Collections/Attack_A_Weapon_Anim
-MRUItem19=/Game/Developers/syhwms/Collections/dead_Weapon_Anim
+MRUItem0=/Game/Developers/syhwms/Collections/Move_KeQing_Skeleton
+MRUItem1=/Game/Developers/syhwms/Collections/KeQing_2D
+MRUItem2=/Game/Developers/syhwms/Collections/Move
+MRUItem3=/Game/Developers/syhwms/Collections/BP_KeQing
+MRUItem4=/Game/Developers/syhwms/Collections/Move_KeQing_Anim
+MRUItem5=/Game/Developers/syhwms/Collections/Move_KeQing_PhysicsAsset
+MRUItem6=/Game/Developers/syhwms/Collections/Jump_B
+MRUItem7=/Game/Developers/syhwms/Collections/Attack_A
+MRUItem8=/Game/Developers/syhwms/Collections/Jump_A_Weapon_Anim
+MRUItem9=/Game/Developers/syhwms/Collections/Attack_A_KeQing_Anim
+MRUItem10=/Game/Developers/syhwms/Collections/Attack_C_KeQing_Anim
+MRUItem11=/Game/Developers/syhwms/Collections/Jump_C_KeQing_Anim
+MRUItem12=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem13=/Game/Developers/syhwms/Collections/Jump_A_KeQing_Anim
+MRUItem14=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
+MRUItem15=/Game/Developers/syhwms/Collections/Walk_KeQing_Anim
+MRUItem16=/Game/Developers/syhwms/Collections/RushA_KeQing_Anim
+MRUItem17=/Game/Developers/syhwms/Collections/Jump_B_KeQing_Anim
+MRUItem18=/Game/Developers/syhwms/Collections/dead_KeQing_Anim
+MRUItem19=/Game/Developers/syhwms/Collections/Attack_B_KeQing_Anim
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2036,6 +2039,8 @@ TimelineEnabledSnaps=MontageSection
 /Game/Developers/syhwms/Collections/BP_KeQing.BP_KeQing=1
 /Game/Developers/syhwms/Collections/Move.Move_KeQing=1
 /Game/Developers/syhwms/Collections/Attack_A.Attack_A_KeQing=1
+/Game/Developers/syhwms/Collections/Jump_B.Jump_B_Weapon=1
+/Game/Developers/syhwms/Collections/Move_KeQing_PhysicsAsset.Move_KeQing_PhysicsAsset=1
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
