--- a/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Widget
+ContentBrowserTab1.SelectedPaths=/Classes_Game/StarryTail
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -1074,13 +1074,13 @@ PhysicsAssetEditor.TimeStamp=2022.01.06-05.49.47
 PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=140.000 Y=0.000
-ScreenPosition=X=149.600 Y=41.600
+ScreenPosition=X=149.000 Y=41.000
 WindowSize=X=1770.000 Y=1003.000
-WindowSize=X=1788.000 Y=1020.800
+WindowSize=X=1788.000 Y=1020.000
 InitiallyMaximized=True
 InitiallyMaximized=False
 None=======
