변경 : 속성  ui 이미지 변경
속성을 표시하는 ui의 이미지 변경

--- a/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1077,6 +1077,7 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Developers/Pocari/Collections/Widget/BP_AttributesWidget.BP_AttributesWidget
 
 [RootWindow]
 ScreenPosition=X=60.000 Y=0.000
@@ -1885,6 +1886,7 @@ ScaleBox.Performance=True
 ScaleBox.Clipping=True
 ScaleBox.Navigation=True
 ScaleBox.Localization=True
+BP_AttributesWidget_C.Default=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/StarryTail.IreneCharacter;
@@ -1929,9 +1931,18 @@ NavMovementComponent="\"Object.Velocity.Velocity\" "
 MovementComponent="\"Object.Velocity.Velocity\" "
 ActorComponent=
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+BP_AttributesWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+IreneAttributeWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+WidgetComponent="\"Object.UserInterface.DrawSize\" "
+MeshComponent="\"Object.UserInterface.DrawSize\" "
+PrimitiveComponent=
+SceneComponent=
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
 
 [DetailMultiObjectNodeExpansion]
 GameMapsSettings=True
@@ -2021,11 +2032,12 @@ IreneCharacter=IreneCharacter.IreneCharacter.Lens,
 CapsuleComponent=
 HOTRELOADED_IreneCharacter_1=IreneCharacter.IreneCharacter.Lens,
 PlayerStart=IreneCharacter.IreneCharacter.Lens,
+SceneComponent=IreneCharacter.IreneCharacter.Lens,
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Developers/Pocari/Collections/Widget/BP_AttributesWidget
-MRUItem1=/Game/Developers/Pocari/Collections/dummy/MT_AttributeUI
-MRUItem2=/Game/Developers/Pocari/Collections/dummy/pngwing_com
+MRUItem1=/Game/Developers/Pocari/Collections/dummy/pngwing_com
+MRUItem2=/Game/Developers/Pocari/Collections/dummy/MT_AttributeUI
 MRUItem3=/Game/Developers/Pocari/Collections/Widget/BP_StopWatchWidget
 MRUItem4=/Game/Developers/syhwms/Collections/Move_KeQing_Skeleton
 MRUItem5=/Game/Developers/syhwms/Collections/KeQing_2D
@@ -2342,7 +2354,7 @@ bMaterialQualityUsed[3]=0
 DisplayInternalClasses=True
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [SuppressableDialogs]
 Warning_ReparentTitle=False
