변경 : 맵 변경
레벨이 깨져서 다시 변경

--- a/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Developers/Pocari/Collections/Widget
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonCPP/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -180,8 +180,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-StarryTail.TimeStamp=2022.03.05-14.50.09
-StarryTail.LastCompileMethod=Runtime
+StarryTail.TimeStamp=2022.03.06-04.40.25
+StarryTail.LastCompileMethod=External
 PakFile.TimeStamp=2022.02.18-06.34.15
 PakFile.LastCompileMethod=External
 RSA.TimeStamp=2022.02.18-06.34.16
@@ -1077,11 +1077,11 @@ TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Developers/Pocari/Collections/Widget/BP_AttributesWidget.BP_AttributesWidget
+OpenAssetsAtExit=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap_BuiltData.ThirdPersonExampleMap_BuiltData
 
 [RootWindow]
 ScreenPosition=X=60.000 Y=0.000
-WindowSize=X=1788.000 Y=1020.000
+WindowSize=X=1790.000 Y=1020.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1887,6 +1887,7 @@ ScaleBox.Clipping=True
 ScaleBox.Navigation=True
 ScaleBox.Localization=True
 BP_AttributesWidget_C.Default=True
+MapBuildDataRegistry.Lighting=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/StarryTail.IreneCharacter;
@@ -2035,26 +2036,26 @@ PlayerStart=IreneCharacter.IreneCharacter.Lens,
 SceneComponent=IreneCharacter.IreneCharacter.Lens,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Developers/Pocari/Collections/Widget/BP_AttributesWidget
-MRUItem1=/Game/Developers/Pocari/Collections/dummy/pngwing_com
-MRUItem2=/Game/Developers/Pocari/Collections/dummy/MT_AttributeUI
-MRUItem3=/Game/Developers/Pocari/Collections/Widget/BP_StopWatchWidget
-MRUItem4=/Game/Developers/syhwms/Collections/Move_KeQing_Skeleton
-MRUItem5=/Game/Developers/syhwms/Collections/KeQing_2D
-MRUItem6=/Game/Developers/syhwms/Collections/Move
-MRUItem7=/Game/Developers/syhwms/Collections/BP_KeQing
-MRUItem8=/Game/Developers/syhwms/Collections/Move_KeQing_Anim
-MRUItem9=/Game/Developers/syhwms/Collections/Move_KeQing_PhysicsAsset
-MRUItem10=/Game/Developers/syhwms/Collections/Jump_B
-MRUItem11=/Game/Developers/syhwms/Collections/Attack_A
-MRUItem12=/Game/Developers/syhwms/Collections/Jump_A_Weapon_Anim
-MRUItem13=/Game/Developers/syhwms/Collections/Attack_A_KeQing_Anim
-MRUItem14=/Game/Developers/syhwms/Collections/Attack_C_KeQing_Anim
-MRUItem15=/Game/Developers/syhwms/Collections/Jump_C_KeQing_Anim
-MRUItem16=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem17=/Game/Developers/syhwms/Collections/Jump_A_KeQing_Anim
-MRUItem18=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem19=/Game/Developers/syhwms/Collections/Walk_KeQing_Anim
+MRUItem0=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/Developers/Pocari/Collections/Widget/BP_AttributesWidget
+MRUItem2=/Game/Developers/Pocari/Collections/dummy/pngwing_com
+MRUItem3=/Game/Developers/Pocari/Collections/dummy/MT_AttributeUI
+MRUItem4=/Game/Developers/Pocari/Collections/Widget/BP_StopWatchWidget
+MRUItem5=/Game/Developers/syhwms/Collections/Move_KeQing_Skeleton
+MRUItem6=/Game/Developers/syhwms/Collections/KeQing_2D
+MRUItem7=/Game/Developers/syhwms/Collections/Move
+MRUItem8=/Game/Developers/syhwms/Collections/BP_KeQing
+MRUItem9=/Game/Developers/syhwms/Collections/Move_KeQing_Anim
+MRUItem10=/Game/Developers/syhwms/Collections/Move_KeQing_PhysicsAsset
+MRUItem11=/Game/Developers/syhwms/Collections/Jump_B
+MRUItem12=/Game/Developers/syhwms/Collections/Attack_A
+MRUItem13=/Game/Developers/syhwms/Collections/Jump_A_Weapon_Anim
+MRUItem14=/Game/Developers/syhwms/Collections/Attack_A_KeQing_Anim
+MRUItem15=/Game/Developers/syhwms/Collections/Attack_C_KeQing_Anim
+MRUItem16=/Game/Developers/syhwms/Collections/Jump_C_KeQing_Anim
+MRUItem17=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem18=/Game/Developers/syhwms/Collections/Jump_A_KeQing_Anim
+MRUItem19=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2162,6 +2163,7 @@ TimelineEnabledSnaps=MontageSection
 /Game/Developers/Pocari/Collections/Widget/BP_AttributesWidget.BP_AttributesWidget=1
 /Game/Developers/Pocari/Collections/Widget/BP_StopWatchWidget.BP_StopWatchWidget=1
 /Game/Developers/Pocari/Collections/dummy/pngwing_com.pngwing_com=1
+/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap_BuiltData.ThirdPersonExampleMap_BuiltData=1
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
