추가 : 오브젝트 파괴시 몬스터 스폰
오브젝트가 파괴될시 오브젝트를 중심으로 원으로 반경 300만큼 안에 랜덤좌표로 생성

단 중심으로부터 거리가 50보다 작은 위치일 경우 조금더 멀리 배치되도록 설정 하였습니다.

--- a/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -181,7 +181,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-StarryTail.TimeStamp=2022.03.07-17.44.13
+StarryTail.TimeStamp=2022.03.08-12.11.28
 StarryTail.LastCompileMethod=Runtime
 PakFile.TimeStamp=2022.02.18-06.34.15
 PakFile.LastCompileMethod=External
@@ -1063,10 +1063,10 @@ ExternalImagePicker.TimeStamp=2022.02.18-06.34.14
 ExternalImagePicker.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2022.02.18-06.34.11
 BlueprintGraph.LastCompileMethod=External
-SkeletonEditor.TimeStamp=2022.01.06-05.49.49
-SkeletonEditor.LastCompileMethod=Unknown
-PinnedCommandList.TimeStamp=2022.01.06-05.49.47
-PinnedCommandList.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2022.02.18-06.34.16
+SkeletonEditor.LastCompileMethod=External
+PinnedCommandList.TimeStamp=2022.02.18-06.34.15
+PinnedCommandList.LastCompileMethod=External
 AnimationEditor.TimeStamp=2022.01.06-05.49.44
 AnimationEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2022.02.18-06.34.16
@@ -1080,9 +1080,9 @@ TextureEditor.LastCompileMethod=Unknown
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=38.000 Y=14.000
+ScreenPosition=X=118.000 Y=1.000
 WindowSize=X=1792.000 Y=1021.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1098,7 +1098,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/STARRY-TAIL/StarryTail/Content/ThirdPersonCPP/Maps
+UNR=../../../../../../Users/Pocari/Desktop/STARRY-TAIL/StarryTail/Content/ThirdPersonCPP/Maps
 BRUSH=C:/UnrealProjects/STARRY-TAIL/StarryTail/Content/
 FBX=C:/UnrealProjects/STARRY-TAIL/StarryTail/Content/
 FBXAnim=C:/UnrealProjects/STARRY-TAIL/StarryTail/Content/
@@ -2092,9 +2092,9 @@ EnemyController.Input=True
 EnemyController.Actor=True
 
 [PlacementMode]
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Script/StarryTail.Enemy;
 RecentlyPlaced=/Script/StarryTail.TestObject;
+RecentlyPlaced=/Script/StarryTail.Enemy;
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/BP_TestObject.BP_TestObject;
 RecentlyPlaced=/Script/StarryTail.IreneCharacter;
 RecentlyPlaced=/Game/Developers/syhwms/Collections/Walk_KeQing_Anim.Walk_KeQing_Anim;
@@ -2329,7 +2329,7 @@ CapsuleComponent=
 HOTRELOADED_IreneCharacter_1=IreneCharacter.IreneCharacter.Lens,
 PlayerStart=IreneCharacter.IreneCharacter.Lens,
 SceneComponent=IreneCharacter.IreneCharacter.Lens,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,IreneCharacter.IreneCharacter.Color Grading,IreneCharacter.Rendering.LOD,TestObject.Physics.ConstraintsGroup,TestObject.Rendering.TextureStreaming,TestObject.Collision.Collision,TestObject.Rendering.LOD,IreneCharacter.IreneCharacter.Rendering Features,
-TestObject=IreneCharacter.IreneCharacter.Lens,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,TestObject.Physics.ConstraintsGroup,TestObject.Rendering.TextureStreaming,IreneCharacter.IreneCharacter.Color Grading,IreneCharacter.Rendering.LOD,TestObject.Collision.Collision,TestObject.Rendering.LOD,IreneCharacter.IreneCharacter.Rendering Features
+TestObject=IreneCharacter.IreneCharacter.Lens,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,TestObject.Physics.ConstraintsGroup,TestObject.Rendering.TextureStreaming,IreneCharacter.IreneCharacter.Color Grading,IreneCharacter.Rendering.LOD,TestObject.Collision.Collision,TestObject.Rendering.LOD,IreneCharacter.IreneCharacter.Rendering Features,
 SkeletalMeshComponent=
 ThirdPersonCharacter_C=IreneCharacter.IreneCharacter.Lens,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
 BrushComponent=
@@ -2341,26 +2341,26 @@ Enemy=IreneCharacter.IreneCharacter.Lens,CapsuleComponent.Collision.Collision,Sk
 NavMeshBoundsVolume=IreneCharacter.IreneCharacter.Lens,CapsuleComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,TestObject.Physics.ConstraintsGroup,TestObject.Rendering.TextureStreaming,IreneCharacter.IreneCharacter.Color Grading,IreneCharacter.Rendering.LOD,TestObject.Collision.Collision,TestObject.Rendering.LOD,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI/BT_Enemy
-MRUItem1=/Game/Animation/EnemyAnimBlueprint
-MRUItem2=/Game/Developers/Pocari/Collections/Widget/BP_HPBar
-MRUItem3=/Game/Developers/Pocari/Collections/Widget/BP_AttributesWidget
-MRUItem4=/Game/BP_TestObject
-MRUItem5=/Game/Developers/Pocari/Collections/Widget/BP_StopWatchWidget
-MRUItem6=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-MRUItem7=/Game/Developers/Pocari/Collections/dummy/pngwing_com
-MRUItem8=/Game/Developers/Pocari/Collections/dummy/MT_AttributeUI
-MRUItem9=/Game/Developers/syhwms/Collections/Move_KeQing_Skeleton
-MRUItem10=/Game/Developers/syhwms/Collections/KeQing_2D
-MRUItem11=/Game/Developers/syhwms/Collections/Move
-MRUItem12=/Game/Developers/syhwms/Collections/BP_KeQing
-MRUItem13=/Game/Developers/syhwms/Collections/Move_KeQing_Anim
-MRUItem14=/Game/Developers/syhwms/Collections/Move_KeQing_PhysicsAsset
-MRUItem15=/Game/Developers/syhwms/Collections/Jump_B
-MRUItem16=/Game/Developers/syhwms/Collections/Attack_A
-MRUItem17=/Game/Developers/syhwms/Collections/Jump_A_Weapon_Anim
-MRUItem18=/Game/Developers/syhwms/Collections/Attack_A_KeQing_Anim
-MRUItem19=/Game/Developers/syhwms/Collections/Attack_C_KeQing_Anim
+MRUItem0=/Game/Animation/Monster_Walk/Dummy_Walk
+MRUItem1=/Game/AI/BT_Enemy
+MRUItem2=/Game/Animation/EnemyAnimBlueprint
+MRUItem3=/Game/Developers/Pocari/Collections/Widget/BP_HPBar
+MRUItem4=/Game/Developers/Pocari/Collections/Widget/BP_AttributesWidget
+MRUItem5=/Game/BP_TestObject
+MRUItem6=/Game/Developers/Pocari/Collections/Widget/BP_StopWatchWidget
+MRUItem7=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+MRUItem8=/Game/Developers/Pocari/Collections/dummy/pngwing_com
+MRUItem9=/Game/Developers/Pocari/Collections/dummy/MT_AttributeUI
+MRUItem10=/Game/Developers/syhwms/Collections/Move_KeQing_Skeleton
+MRUItem11=/Game/Developers/syhwms/Collections/KeQing_2D
+MRUItem12=/Game/Developers/syhwms/Collections/Move
+MRUItem13=/Game/Developers/syhwms/Collections/BP_KeQing
+MRUItem14=/Game/Developers/syhwms/Collections/Move_KeQing_Anim
+MRUItem15=/Game/Developers/syhwms/Collections/Move_KeQing_PhysicsAsset
+MRUItem16=/Game/Developers/syhwms/Collections/Jump_B
+MRUItem17=/Game/Developers/syhwms/Collections/Attack_A
+MRUItem18=/Game/Developers/syhwms/Collections/Jump_A_Weapon_Anim
+MRUItem19=/Game/Developers/syhwms/Collections/Attack_A_KeQing_Anim
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2473,6 +2473,7 @@ TimelineEnabledSnaps=MontageSection
 /Game/AI/BT_Enemy.BT_Enemy=1
 /Game/AI/BB_Enemy.BB_Enemy=1
 /Game/Animation/EnemyAnimBlueprint.EnemyAnimBlueprint=1
+/Game/Animation/Monster_Walk/Dummy_Walk.Dummy_Walk=1
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
