수정: 깃이그노어 테스트용
수정: 깃이그노어 테스트용

깃이그노어 작동이 이상하다고 생각되어 테스트 합니다.

성열현

--- a/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/StarryTail/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Developers/syhwms/Collections
+ContentBrowserTab1.SelectedPaths=/Classes_Game/StarryTail
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -184,8 +184,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-StarryTail.TimeStamp=2022.03.09-09.29.30
-StarryTail.LastCompileMethod=Runtime
+StarryTail.TimeStamp=2022.03.10-05.11.53
+StarryTail.LastCompileMethod=External
 PakFile.TimeStamp=2022.02.18-06.34.15
 PakFile.LastCompileMethod=External
 RSA.TimeStamp=2022.02.18-06.34.16
@@ -1080,13 +1080,11 @@ TextureEditor.TimeStamp=2022.02.18-06.34.17
 TextureEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Developers/syhwms/Collections/Move_KeQing_Skeleton_Montage.Move_KeQing_Skeleton_Montage
-OpenAssetsAtExit=/Game/Developers/syhwms/Collections/BP_KeQing.BP_KeQing
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=144.800 Y=32.800
-WindowSize=X=1795.200 Y=1024.000
+WindowSize=X=1803.200 Y=1032.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1427,22 +1425,22 @@ IreneCharacter.Input=True
 IreneCharacter.Replication=True
 IreneCharacter.Pawn=True
 IreneCharacter.Camera=False
-IreneCharacter.Character=True
-IreneCharacter.Shape=True
-IreneCharacter.MovementComponent=True
-IreneCharacter.PlanarMovement=True
-IreneCharacter.Velocity=True
-IreneCharacter.NavMovement=True
-IreneCharacter.Character Movement: NavMesh Movement=True
-IreneCharacter.RootMotion=True
-IreneCharacter.Character Movement: Avoidance=True
-IreneCharacter.Character Movement=True
-IreneCharacter.Character Movement: Physics Interaction=True
-IreneCharacter.Character Movement (Rotation Settings)=True
-IreneCharacter.Character Movement: Custom Movement=True
-IreneCharacter.Character Movement: Flying=True
-IreneCharacter.Character Movement: Swimming=True
-IreneCharacter.Character Movement (Networking)=True
+IreneCharacter.Character=False
+IreneCharacter.Shape=False
+IreneCharacter.MovementComponent=False
+IreneCharacter.PlanarMovement=False
+IreneCharacter.Velocity=False
+IreneCharacter.NavMovement=False
+IreneCharacter.Character Movement: NavMesh Movement=False
+IreneCharacter.RootMotion=False
+IreneCharacter.Character Movement: Avoidance=False
+IreneCharacter.Character Movement=False
+IreneCharacter.Character Movement: Physics Interaction=False
+IreneCharacter.Character Movement (Rotation Settings)=False
+IreneCharacter.Character Movement: Custom Movement=False
+IreneCharacter.Character Movement: Flying=False
+IreneCharacter.Character Movement: Swimming=False
+IreneCharacter.Character Movement (Networking)=False
 IreneCharacter.Character Movement: Jumping / Falling=False
 IreneCharacter.Character Movement: Walking=False
 IreneCharacter.Character Movement (General Settings)=False
@@ -2147,12 +2145,12 @@ IreneCharacter.Attack=True
 EditorNotifyObject.AnimLink=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/StarryTail.IreneCharacter;
 RecentlyPlaced=/Script/StarryTail.EnemyMagicAttack;
 RecentlyPlaced=/Script/StarryTail.Enemy;
 RecentlyPlaced=/Script/StarryTail.TestObject;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/BP_TestObject.BP_TestObject;
-RecentlyPlaced=/Script/StarryTail.IreneCharacter;
 RecentlyPlaced=/Game/Developers/syhwms/Collections/Walk_KeQing_Anim.Walk_KeQing_Anim;
 RecentlyPlaced=/Game/Developers/syhwms/Collections/RushA_KeQing_Anim.RushA_KeQing_Anim;
 RecentlyPlaced=/Game/Developers/syhwms/Collections/Move_KeQing_Anim.Move_KeQing_Anim;
@@ -2227,8 +2225,8 @@ EditorAnimBaseObj=
 HOTRELOADED_IreneCharacter_8="\"Object.IreneCharacter.CharacterDataStruct\" \"Object.IreneCharacter.Weapon.Object.Animation\" \"Object.IreneCharacter.Weapon.Object.Animation.AnimationData\" \"Object.IreneCharacter.Weapon.Object.SkeletalMesh\" \"Object.IreneCharacter.Weapon.Object.Physics\" \"Object.IreneCharacter.Weapon.Object.Clothing\" \"Object.IreneCharacter.Weapon.Object.MasterPoseComponent\" \"Object.IreneCharacter.Weapon.Object.Optimization\" \"Object.IreneCharacter.Weapon.Object.ClothingSimulation\" \"Object.IreneCharacter.Weapon.Object.Mesh\" \"Object.IreneCharacter.Weapon.Object.LOD\" \"Object.IreneCharacter.Weapon.Object.Rendering\" \"Object.IreneCharacter.Weapon.Object.Rendering.CustomPrimitiveData\" \"Object.IreneCharacter.Weapon.Object.Lighting\" \"Object.IreneCharacter.Weapon.Object.Lighting.LightingChannels\" \"Object.IreneCharacter.Weapon.Object.MaterialParameters\" \"Object.IreneCharacter.Weapon.Object.HLOD\" \"Object.IreneCharacter.Weapon.Object.Collision\" \"Object.IreneCharacter.Weapon.Object.Collision.BodyInstance\" \"Object.IreneCharacter.Weapon.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" \"Object.IreneCharacter.Weapon.Object.TextureStreaming\" \"Object.IreneCharacter.Weapon.Object.Mobile\" \"Object.IreneCharacter.Weapon.Object.Navigation\" \"Object.IreneCharacter.Weapon.Object.VirtualTexture\" \"Object.IreneCharacter.Weapon.Object.Transform\" \"Object.IreneCharacter.Weapon.Object.Tags\" \"Object.IreneCharacter.Weapon.Object.AssetUserData\" \"Object.IreneCharacter.Weapon.Object.Activation\" \"Object.IreneCharacter.Weapon.Object.Cooking\" \"Object.UI.AttributeWidget.Object.Rendering.BackgroundColor\" \"Object.UI.AttributeWidget.Object.Rendering.TintColorAndOpacity\" \"Object.UI.AttributeWidget.Object.Rendering.CustomPrimitiveData\" \"Object.UI.AttributeWidget.Object.Collision.BodyInstance\" \"Object.UI.AttributeWidget.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.UI.AttributeWidget.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" "
 AnimMontage="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
 AnimCompositeBase="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
-AnimSequenceBase=
-AnimationAsset=
+AnimSequenceBase="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
+AnimationAsset="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
 
 [DetailMultiObjectNodeExpansion]
 GameMapsSettings=True
