수정: 깃이그노어
수정: 깃이그노어

에러... 많다

성열현

제발 성공해라

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-StarryTail/
+StarryTail/.vs/
+StarryTail/Binaries/
+StarryTail/Intermediate/
+StarryTail/Saved/
+StarryTail/StarryTail.sln
 !Config/
 !Content/
 !Source/
 !StarryTail.uproject
+*_BuiltData.uasset
