--- a/StarryTail/Config/DefaultInput.ini
+++ b/StarryTail/Config/DefaultInput.ini
@@ -187,6 +187,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_X)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=MagicLeap_Left_Trackpad_X)
 +AxisMappings=(AxisName="LeftButton",Scale=1.000000,Key=LeftMouseButton)
++AxisMappings=(AxisName="MouseWheel",Scale=1.000000,Key=MouseWheelAxis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
