수정 : 깃 이그노어 및 옛날 몬스터 삭제
안쓰는 몬스터 삭제 및 이그노어 수정

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ StarryTail/Build/
 StarryTail/Intermediate/
 StarryTail/Saved/
 StarryTail/StarryTail.sln
+StarryTail/Plugins/
 !Config/
 !Content/
 !Source/
